Closed Bug 1625854 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::dom::ConsoleRunnable::WriteData]

Categories

(Core :: DOM: Core & HTML, defect, P1)

Desktop
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox-esr68 --- unaffected
firefox74 --- unaffected
firefox75 --- unaffected
firefox76 --- fixed

People

(Reporter: pascalc, Assigned: baku)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-3251c0fd-445d-460f-a475-c13f60200329.

Top 10 frames of crashing thread:

0 xul.dll mozilla::dom::ConsoleRunnable::WriteData dom/console/Console.cpp:437
1 xul.dll mozilla::dom::ConsoleRunnable::WriteArguments dom/console/Console.cpp:380
2 xul.dll mozilla::dom::ConsoleWorkerRunnable::Dispatch dom/console/Console.cpp:539
3 xul.dll mozilla::dom::Console::MethodInternal dom/console/Console.cpp:1461
4 xul.dll static mozilla::dom::Console::Method dom/console/Console.cpp:1278
5 xul.dll static mozilla::dom::Console::Error dom/console/Console.cpp:985
6 xul.dll mozilla::dom::console_Binding::error dom/bindings/ConsoleBinding.cpp:3598
7 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:568
8 xul.dll Interpret js/src/vm/Interpreter.cpp:3026
9 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:603

10 crashes in nightly 76 in the last week (Win10 and Win7) , the first crash was reported with build 20200321212809.

Changelog for this build:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=7df85231b517bb1864e949b62c567ada54352105&tochange=a1bea41f99f4ce23614af2fa3901d74d4044d5cf

Component: General → DOM: Core & HTML

MOZ_CRASH(We should support any kind of data!)

It looks like baku added this crash in bug 1623385.

Flags: needinfo?(amarchesini)
Regressed by: 1623385
Has Regression Range: --- → yes
Assignee: nobody → amarchesini
Status: NEW → ASSIGNED
Flags: needinfo?(amarchesini)
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c2c541d1559d Avoid crashing when console is unabled to serialize the message, r=smaug
Priority: -- → P1
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: