Bug 1625854 - Avoid crashing when console is unabled to serialize the message, r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D68794